[metadata]
name = tutorial
version = 0.1.0
author = Rafa Felix
author_email = rafafelixphd@gmail.com
description = A small example package for tutorial purposes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rfelixmg/tutorial
project_urls =
    Bug Tracker = https://github.com/rfelixmg/tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4

install_requires=
    numpy==1.26.2
    scikit-learn==1.3.2
    pydantic==2.5.1

[options.packages.find]
where=src

[options.package_data]
* = *.md
